frontend/test/should_fail/index_asArray_same_argument_mismatch.grg
#using "index_where_non_index_expected_model.gm"

rule i {
	if{ nodesFromIndexSameAsArray(fooi, "42").size() > 0; }
	
	modify {
	}
}
